--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,4 @@
 pandas>=2.0.0
-numpy>=1.24.0
-plotly>=5.15.0
-dash>=2.11.0
 yfinance>=0.2.30
-requests>=2.31.0
-python-dotenv>=1.0.0
+colorama>=0.4.6
+
