--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
-pandas>=2.0.0
-yfinance>=0.2.30
-colorama>=0.4.6
-streamlit>=1.25.0
-altair>=5.0.1
+streamlit>=1.20
+altair>=4.2
+pandas>=1.5
+numpy>=1.23
+yfinance>=0.2
+scipy>=1.9
+matplotlib>=3.6
+seaborn>=0.12
